fix collection copy